<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AliveCor Training</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">&#160;&#160;&#160;&#160;Next&#160;&#160;&#160;&#160;</string>
    <string name="back">&#160;&#160;&#160;&#160;Back&#160;&#160;&#160;&#160;</string>
    <string name="practice">&#160;&#160;Practice&#160;&#160;</string>

    <string name="aboutInformation">
        This ECG training app is designed specifically for Indian
        Volunteer healthcare workers (ASHAs). It contains training lessons on the basics
        of reading ECGs tailored for ASHAs, and includes practice questions with
        progress updates. Through user testing, the design and lessons are meant to be
        simple and easy to navigate.

        \n\nMobile ECG devices make it possible to perform community screening for heart conditions.
        When these screenings are performed by front line health workers, it is necessary to provide
        some basic health training to the workers to help them explain the results to patients.

        \n\nCreated as part of a capstone project for CSE482B at the University of Washington.
    </string>

    <!-- practice activity -->
    <string name="practice_question">Practice Questions</string>
    <string name="help">Help</string>
    <string name="Home">Home</string>
    <string name="loading">Loading…</string>

    <!-- Questions -->
    <string name="isItArtifactOrArrhythmia">This is not an Arrhythmia. It is an artifact from electrical interference (60 cycles).</string>
    <string name="isItPWave">The highlighted section of the above ECG is a P-Wave.</string>
    <string name="isItQWave">The highlighted section of the above ECG is a Q-Wave.</string>
    <string name="isItRWave">The highlighted section of the above ECG is a R-Wave.</string>
    <string name="isItSWave">The highlighted section of the above ECG is a S-Wave.</string>
    <string name="isItTWave">The highlighted section of the above ECG is a T-Wave.</string>
    <string name="noMoreQuestions">No More Questions of This Category :(</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="correct">That is correct!</string>
    <string name="incorrect">Incorrect, please try again</string>
    <string name="whatIsHeartrate">What is the closest number (bpm) to the heart rate in the below ECG?</string>
    <string name="isItAtrialFibrilationOrSinus">Does the below ECG depict Atrial Fibrillation or Sinus Rhythm?</string>
</resources>