<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/practice_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice_question"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--ImageView used for showing pictures along with questions-->
    <ImageView
        android:id="@+id/question_image"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@+id/question_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="30sp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLeftTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_image" />

    <Button
        android:id="@+id/buttonLeftTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRightTop"
        app:layout_constraintTop_toTopOf="@+id/buttonRightTop"
        app:layout_constraintEnd_toStartOf="@+id/buttonRightTop"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRightTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        app:layout_constraintTop_toBottomOf="@+id/question_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonLeftTop" />

    <Button
        android:id="@+id/buttonLeftBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRightBottom"
        app:layout_constraintTop_toTopOf="@+id/buttonRightBottom"
        app:layout_constraintEnd_toStartOf="@+id/buttonRightBottom"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRightBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/help_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonLeftBottom"
        app:layout_constraintTop_toBottomOf="@+id/buttonRightTop" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/help_button"
        app:layout_constraintEnd_toStartOf="@+id/help_button"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:layout_constraintTop_toTopOf="@+id/home_button" >

        <!--PreviousButton-->
        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/angle_left_solid"
            android:backgroundTint="#DFD2D1"
            android:text="@string/Previous" />

        <!--NextButton-->
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#DFD2D1"
            android:src="@drawable/angle_right_solid"
            android:text="@string/Next" />

    </LinearLayout>

    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toEndOf="@+id/home_button" />
</androidx.constraintlayout.widget.ConstraintLayout>